# Macsplorer-v2

./: .gitignore  INSTALL.md  README.md  Voorbeeld_synoniemen.xlsx
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  msend.rs
src/assets/icons/: PLAATS-JE-PNGS-HIER.txt
