[package]
name = "macsplorer"
version = "0.1.0"
description = "Macsplorer - Liquid Glass file explorer"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# 'shellthumb' gebruikt Windows' eigen thumbnail-cache (supersnel).
# Compileert het niet? Bouw dan met:  cargo tauri dev --no-default-features
default = ["shellthumb"]
shellthumb = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_System_Ole",
  "Win32_System_Com_StructuredStorage",
] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
calamine = "0.26"
rfd = "0.15"
dirs = "5"
fs2 = "0.4"
open = "5"
trash = "5"
tauri-plugin-drag = "2"
arboard = "3"
socket2 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp", "tiff", "ico"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
